# C_Compiler

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.claude/state/: current_task.json
include/: Utils.h
include/Automatons/: istate.h  nfa.h
include/Compiler/: Compiler.h  ICompiler.h
include/Lexer/: lexer.h  token.h
include/compiler/: compiler.h  icompiler.h
include/lexer/: lexer.h  token.h
sessions/: sessions-config.json
sessions/tasks/: m-implement-vscode-cpp-env.md
src/: CMakeLists.txt
src/ast/: CMakeLists.txt
src/codegen/: CMakeLists.txt
src/compiler/: compiler.cpp
src/driver/: CMakeLists.txt
src/ir/: CMakeLists.txt
src/lexer/: CMakeLists.txt  lexer.cpp
src/parser/: CMakeLists.txt
src/sema/: CMakeLists.txt
src/utils/: CMakeLists.txt
tests/: CMakeLists.txt  test_lexer.cpp  test_token.cpp
