# Tests placeholder. When tests are added, create targets and register with CTest.

# Example (to be added once sources exist):
# add_executable(unit_example tests/example_test.cpp)
# target_link_libraries(unit_example PRIVATE compiler_core gtest_main)
# add_test(NAME unit_example COMMAND unit_example)

